# foo-programming-collection

./: .editorconfig  LICENSE  README.md
csv-customer-file-generator/python-multithread-approach/: .gitignore  README.md  pyproject.toml
csv-customer-file-generator/python-multithread-approach/csv_customer_file_generator/: cli.py  config.py  generator.py  main.py  models.py
light-gps-tracker-microservice/basic-api-fastapi/: .gitignore  docker-compose.yml  pyproject.toml
light-gps-tracker-microservice/basic-api-fastapi/clients/gps_generator/: main.py
light-gps-tracker-microservice/basic-api-fastapi/clients/react-web-client/: package-lock.json
light-gps-tracker-microservice/basic-api-fastapi/gps_generator/: main.py
light-gps-tracker-microservice/basic-api-fastapi/light_gps_tracker/: .env.example  config.py  main.py  models.py  repositories.py  timescaledb.py  views.py
light-gps-tracker-microservice/basic-api-fastapi/requirements/: dev-requirements.txt  prod-requirements.txt
light-gps-tracker-microservice/basic-api-fastapi/timescaledb/: setup_db.sql
python-kafka-and-tooling/basic-example/: .gitignore  README.md  docker-compose.yml  pyproject.toml
python-kafka-and-tooling/basic-example/kafka/: register_schema.sh
python-kafka-and-tooling/basic-example/kafka/jmx_exporter/: config.yml
python-kafka-and-tooling/basic-example/monitoring/prometheus/: prometheus.yml
python-kafka-and-tooling/basic-example/python/avro-consumer/: .env.example  config.py  main.py
python-kafka-and-tooling/basic-example/python/consumer/: .env  .env.example  config.py  main.py  models.py  multiplexer.py
(+409 files in other folders)
