[tool.poetry]
name = "csv-customer-file-generator"
version = "0.1.0"
description = ""
authors = ["JangasCodingplace <janisgoesser92@gmail.com>"]

[tool.black]
line-length = 100

[flake8]
max-line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
